--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
 				font-family: 'Raleway', sans-serif;
 			}
 
-			h1 {
-				color: #0088ff;
-			}
-
 			a {
 				color: #0088ff;
 			}
@@ -103,50 +99,55 @@
 								href="https://architecture.fail/">Hardware Security Lab</a> advised by Prof. <a
 								href="https://www.cc.gatech.edu/~genkin/">Daniel Genkin</a>. I am part of the <a
 								href="https://scp.cc.gatech.edu">School of Cybersecurity and Privacy</a> at the <a
-								href="https://www.gatech.edu/">Georgia Institute of Technology</a>. I graduated from the <a
-								href="https://umich.edu">University of Michigan</a> in May 2021 with my bachelor's
+								href="https://www.gatech.edu/">Georgia Institute of Technology</a>. I graduated from the
+							<a href="https://umich.edu">University of Michigan</a> in May 2021 with my bachelor's
 							degree in computer science, where I worked on projects with Daniel and Prof. <a
 								href="https://kjleach.eecs.umich.edu">Kevin Leach</a>.
 						</p>
 
 						<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> cat research.txt</h4>
-						<p>I am interested in offensive hardware security and side channels. My work is to scrutinize exotic optimizations in microarchitecture, and investigate if these optimizations carry implications for security. Within this field, my focus is on Apple Silicon and the security of web browser engines.</p>
+						<p>I am interested in offensive hardware security and side channels. My work is to scrutinize
+							exotic optimizations in microarchitecture, and investigate if these optimizations carry
+							implications for security. Within this field, my focus is on Apple Silicon and the security
+							of web browser engines.</p>
 
 						<p>Before side channels, I worked on machine learning models for binary analysis, network
 							security and intrusion detection systems, and a little bit of bioinformatics alongside my
 							undergraduate minor in biology. I was also on the course staff of Michigan's <a
 								href="https://eecs388.org">computer security course</a> for two years as a teaching
-							assistant, and brought components of it over to Georgia Tech's <a href="https://gtinfosec.org/"">Introduction to Information Security</a> over a year's tenure.</p>
+							assistant, and brought components of it over to Georgia Tech's <a
+								href="https://gtinfosec.org/"">Introduction to Information Security</a> over a year's tenure.</p>
 
-						<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> cat misc.txt</h4>
-						<p>When I am not working on side channels, I enjoy cooking, watching movies, and going on a hike
-							or road trip. Ever since I got a Google Pixel as my phone (and free unlimited Google Photos
-							storage as a result), I have been taking pictures of nice scenery or objects, printing them,
-							and framing them on my wall.</p>
+						<h4 style=" color: #0088ff"><small>nosajmik@gatech-scp:~$</small> cat misc.txt</h4>
+								<p>Outside of work, I enjoy cooking, movies, hiking, traveling, road tripping, working
+									on cars, tubing/boating near Atlanta, and discovering new restaurants and bars.</p>
 
-						<p>You can find me on floor 10 of the Coda Building, at 756 W Peachtree St NW, Atlanta, GA 30308
-							- or reach me at nosajmik (at) gatech (dot) edu. That's kimjason spelled backwards, and
-							originally was my username at Michigan.</p>
+								<p>My lab is on floor 9 of the Coda Building, at 756 W Peachtree St NW, Atlanta,
+									GA 30308, and my email is nosajmik (at) gatech (dot) edu. That's kimjason spelled
+									backwards, and originally was my username at Michigan.</p>
 
-						<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> ls publications/</h4>
-						<ul>
-							<li class="pub">Ayush Agarwal, Sioli O'Connell, <u>Jason Kim</u>, Shaked Yehezkel, Daniel
-								Genkin, Eyal Ronen, and Yuval Yarom.<br>
-								Spook.js: Attacking Chrome Strict Site Isolation via Speculative Execution.<br>
-								To appear in IEEE Symposium on Security and Privacy (S&P) 2022.<br>
-								<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
-									<a target="_blank" href="https://www.spookjs.com" class="btn btn-secondary mybtn"
-										role="button"><i class="fa fa-globe" aria-hidden="true"></i>Website</a>
-									<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
-										disabled></button>
-									<a target="_blank" href="https://www.spookjs.com/files/spook-js.pdf"
-										class="btn btn-secondary mybtn" role="button"><i class="fa fa-file-pdf-o"
-											aria-hidden="true"></i>Paper (PDF)</a>
-								</div>
-							</li>
-							<li class="pub"><u>Jason Kim</u>, Daniel Genkin, and Kevin Leach.<br>SToPR: Swift Toolchain
-								Provenance Recovery of ARM Program Binaries.<br>Revision in progress.<br></li>
-						</ul>
+								<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> ls publications/</h4>
+								<ul>
+									<li class="pub">Ayush Agarwal, Sioli O'Connell, <u>Jason Kim</u>, Shaked Yehezkel,
+										Daniel
+										Genkin, Eyal Ronen, and Yuval Yarom.<br>
+										Spook.js: Attacking Chrome Strict Site Isolation via Speculative Execution.<br>
+										To appear in IEEE Symposium on Security and Privacy (S&P) 2022.<br>
+										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
+											<a target="_blank" href="https://www.spookjs.com"
+												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
+													aria-hidden="true"></i>Website</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank" href="https://www.spookjs.com/files/spook-js.pdf"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+										</div>
+									</li>
+									<li class="pub"><u>Jason Kim</u>, Daniel Genkin, and Kevin Leach.<br>SToPR: Swift
+										Toolchain
+										Provenance Recovery of ARM Program Binaries.<br>Revision in progress.<br></li>
+								</ul>
 					</div>
 				</div>
 			</div>
