--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
 							class="fa fa-graduation-cap" aria-hidden="true"></i>Curriculum Vitae</a>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
 					<a target="_blank" href="https://github.com/jasonkimprojects" class="btn btn-secondary mybtn"
-						role="button"><i class="fa fa-github" aria-hidden="true"></i>nosajmik</a>
-					<a target="_blank" href="https://github.com/jasonkimprojects" class="btn btn-secondary mybtn"
-						role="button"><i class="fa fa-github" aria-hidden="true"></i>jasonkimprojects</a>
+						role="button"><i class="fa fa-github" aria-hidden="true"></i>GitHub</a>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
 					<a target="_blank" href="https://linkedin.com/in/nosajmik" class="btn btn-secondary mybtn"
 						role="button"><i class="fa fa-linkedin-square" aria-hidden="true"></i>LinkedIn</a>
@@ -102,13 +100,14 @@
 								href="https://www.gatech.edu/">Georgia Institute of Technology</a>. I graduated from the
 							<a href="https://umich.edu">University of Michigan</a> in May 2021 with my bachelor's
 							degree in computer science, where I worked on projects with Daniel and Prof. <a
-								href="https://kjleach.eecs.umich.edu">Kevin Leach</a>.
+								href="https://kjl.name/">Kevin Leach</a>.
 						</p>
 
 						<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> cat research.txt</h4>
 						<p>I am interested in offensive hardware security and side channels. My work is to scrutinize
 							exotic optimizations in microarchitecture, and investigate if these optimizations carry
-							implications for security. Within this field, my focus is on Apple Silicon and the security
+							implications for security. Within this field, my focus is on recent ARM SoCs and the
+							security
 							of web browser engines.</p>
 
 						<p>Before side channels, I worked on machine learning models for binary analysis, network
@@ -128,11 +127,111 @@
 
 								<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> ls publications/</h4>
 								<ul>
+									<li class="pub">
+										Ingab Kang, Walter Wang, <u>Jason Kim</u>, Stephan van Schaik, Youssef Tobah,
+										Daniel Genkin, Andrew Kwong, and Yuval Yarom.<br>
+										<b>SledgeHammer: Amplifying Rowhammer via Bank-level Parallelism.</b><br>
+										USENIX Security Symposium, 2024.<br>
+										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
+											<a target="_blank"
+												href="https://www.usenix.org/conference/usenixsecurity24/presentation/kang"
+												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
+													aria-hidden="true"></i>USENIX</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank"
+												href="https://www.usenix.org/system/files/sec24summer-prepub-482-kang.pdf"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+										</div>
+									</li>
+									<li class="pub">
+										Hritvik Taneja, <u>Jason Kim</u>, Jie Jeff Xu, Stephan van Schaik, Daniel
+										Genkin, and Yuval Yarom.<br>
+										<b>Hot Pixels: Frequency, Power, and Temperature Attacks on GPUs and ARM
+											SoCs.</b><br>
+										USENIX Security Symposium, 2023.<br>
+										CSAW Applied Research Competition (North America), 2023, Finalist.<br>
+										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
+											<a target="_blank" href="https://arxiv.org/abs/2305.12784"
+												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
+													aria-hidden="true"></i>ArXiv</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank"
+												href="https://www.usenix.org/conference/usenixsecurity23/presentation/taneja"
+												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
+													aria-hidden="true"></i>USENIX</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank"
+												href="https://www.usenix.org/system/files/usenixsecurity23-taneja.pdf"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+										</div>
+									</li>
+									<li class="pub">
+										Andrew Kwong, Walter Wang, <u>Jason Kim</u>, Jonathan Berger, Daniel Genkin,
+										Eyal Ronen, Hovav Shacham, Riad Wahby, and Yuval Yarom.<br>
+										<b>Checking Passwords on Leaky Computers: A Side Channel Analysis of Chrome's
+											Password Leak Detection Protocol.</b><br>
+										USENIX Security Symposium, 2023.<br>
+										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
+											<a target="_blank"
+												href="https://www.usenix.org/conference/usenixsecurity23/presentation/kwong"
+												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
+													aria-hidden="true"></i>USENIX</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank"
+												href="https://www.usenix.org/system/files/usenixsecurity23-kwong.pdf"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank" href="https://www.youtube.com/watch?v=QT2KRH4clNM"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-video-camera" aria-hidden="true"></i>Video</a>
+										</div>
+									</li>
+									<li class="pub">
+										<u>Jason Kim</u>, Stephan van Schaik, Daniel Genkin, and Yuval Yarom.<br>
+										<b>iLeakage: Browser-based Timerless Speculative Execution Attacks on Apple
+											Devices.</b><br>
+										ACM Conference on Computer and Communications Security (CCS), 2023.<br>
+										CSAW Applied Research Competititon (North America), 2023, Finalist.<br>
+										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
+											<a target="_blank" href="https://ileakage.com/"
+												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
+													aria-hidden="true"></i>Website</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank" href="https://ileakage.com/files/ileakage.pdf"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+										</div>
+									</li>
+									<li class="pub">
+										<u>Jason Kim</u>, Daniel Genkin, and Kevin Leach.<br>
+										<b>Revisiting Lightweight Compiler Provenance Recovery on ARM Binaries.</b><br>
+										International Conference on Program Comprehension (ICPC), RENE Track, 2023.<br>
+										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
+											<a target="_blank" href="https://arxiv.org/abs/2305.03934"
+												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
+													aria-hidden="true"></i>ArXiv</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank" href="https://arxiv.org/pdf/2305.03934.pdf"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+										</div>
+									</li>
 									<li class="pub">Ayush Agarwal, Sioli O'Connell, <u>Jason Kim</u>, Shaked Yehezkel,
 										Daniel
 										Genkin, Eyal Ronen, and Yuval Yarom.<br>
-										Spook.js: Attacking Chrome Strict Site Isolation via Speculative Execution.<br>
-										To appear in IEEE Symposium on Security and Privacy (S&P) 2022.<br>
+										<b>Spook.js: Attacking Chrome Strict Site Isolation via Speculative
+											Execution.</b><br>
+										IEEE Symposium on Security and Privacy (S&P), 2022.<br>
 										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
 											<a target="_blank" href="https://www.spookjs.com"
 												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
@@ -142,11 +241,13 @@
 											<a target="_blank" href="https://www.spookjs.com/files/spook-js.pdf"
 												class="btn btn-secondary mybtn" role="button"><i
 													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank" href="https://www.youtube.com/watch?v=jkbX7NrrHcw"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-video-camera" aria-hidden="true"></i>Video</a>
 										</div>
 									</li>
-									<li class="pub"><u>Jason Kim</u>, Daniel Genkin, and Kevin Leach.<br>SToPR: Swift
-										Toolchain
-										Provenance Recovery of ARM Program Binaries.<br>Revision in progress.<br></li>
 								</ul>
 					</div>
 				</div>
