Point GitHub to nosajmik

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<a target="_blank" href="files/jasonkim-cv.pdf" class="btn btn-secondary mybtn" role="button"><i
 							class="fa fa-graduation-cap" aria-hidden="true"></i>Curriculum Vitae</a>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
-					<a target="_blank" href="https://github.com/jasonkimprojects" class="btn btn-secondary mybtn"
+					<a target="_blank" href="https://github.com/nosajmik" class="btn btn-secondary mybtn"
 						role="button"><i class="fa fa-github" aria-hidden="true"></i>GitHub</a>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
 					<a target="_blank" href="https://linkedin.com/in/nosajmik" class="btn btn-secondary mybtn"
