Add DBLP and Google Scholar

--- a/index.html
+++ b/index.html
@@ -78,13 +78,20 @@
 			<div class="row">
 				<div class="btn-group mx-auto" role="group">
 					<a target="_blank" href="files/jasonkim-cv.pdf" class="btn btn-secondary mybtn" role="button"><i
-							class="fa fa-graduation-cap" aria-hidden="true"></i>Curriculum Vitae</a>
+							class="fa fa-graduation-cap" aria-hidden="true"></i>CV</a>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
 					<a target="_blank" href="https://github.com/nosajmik" class="btn btn-secondary mybtn"
 						role="button"><i class="fa fa-github" aria-hidden="true"></i>GitHub</a>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
 					<a target="_blank" href="https://linkedin.com/in/nosajmik" class="btn btn-secondary mybtn"
 						role="button"><i class="fa fa-linkedin-square" aria-hidden="true"></i>LinkedIn</a>
+					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
+					<a target="_blank" href="https://dblp.org/pid/325/3299.html" class="btn btn-secondary mybtn"
+						role="button"><i class="fa fa-book" aria-hidden="true"></i>DBLP</a>
+					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
+					<a target="_blank" href="https://scholar.google.com/citations?user=537xgoAAAAAJ"
+						class="btn btn-secondary mybtn" role="button"><i class="fa fa-google"
+							aria-hidden="true"></i>Scholar</a>
 				</div>
 			</div>
 
@@ -92,7 +99,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="col-md-12">
-						<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> whoami</h4>
+						<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> whoami</h4>
 						<p>Hello! My name is Jason Kim, and I am a third-year PhD student in the <a
 								href="https://architecture.fail/">Hardware Security Lab</a> advised by Prof. <a
 								href="https://www.cc.gatech.edu/~genkin/">Daniel Genkin</a>. I am part of the <a
@@ -103,10 +110,11 @@
 								href="https://kjl.name/">Kevin Leach</a>.
 						</p>
 
-						<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> cat research.txt</h4>
+						<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> cat research.txt</h4>
 						<p>I am interested in offensive hardware security and side channels. My work is to scrutinize
 							exotic optimizations in microarchitecture, and investigate if these optimizations carry
-							implications for security. Within this field, my focus is on recent ARM SoCs and the
+							implications for security. Within this field, my focus is on recent heavyweight ARM SoCs and
+							the
 							security
 							of web browser engines.</p>
 
@@ -117,15 +125,15 @@
 							assistant, and brought components of it over to Georgia Tech's <a
 								href="https://gtinfosec.org/"">Introduction to Information Security</a> over a year's tenure.</p>
 
-						<h4 style=" color: #0088ff"><small>nosajmik@gatech-scp:~$</small> cat misc.txt</h4>
+						<h4 style=" color: #0088ff"><small>nosajmik@gthwsec:~$</small> cat misc.txt</h4>
 								<p>Outside of work, I enjoy cooking, movies, hiking, traveling, road tripping, working
 									on cars, tubing/boating near Atlanta, and discovering new restaurants and bars.</p>
 
-								<p>My lab is on floor 9 of the Coda Building, at 756 W Peachtree St NW, Atlanta,
+								<p>My desk is at Suite E0952J of the Coda Building, at 756 W Peachtree St NW, Atlanta,
 									GA 30308, and my email is nosajmik (at) gatech (dot) edu. That's kimjason spelled
 									backwards, and originally was my username at Michigan.</p>
 
-								<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> ls publications/</h4>
+								<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> ls publications/</h4>
 								<ul>
 									<li class="pub">
 										Ingab Kang, Walter Wang, <u>Jason Kim</u>, Stephan van Schaik, Youssef Tobah,
@@ -142,7 +150,7 @@
 											<a target="_blank"
 												href="https://www.usenix.org/system/files/sec24summer-prepub-482-kang.pdf"
 												class="btn btn-secondary mybtn" role="button"><i
-													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper</a>
 										</div>
 									</li>
 									<li class="pub">
@@ -167,7 +175,7 @@
 											<a target="_blank"
 												href="https://www.usenix.org/system/files/usenixsecurity23-taneja.pdf"
 												class="btn btn-secondary mybtn" role="button"><i
-													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper</a>
 										</div>
 									</li>
 									<li class="pub">
@@ -186,7 +194,7 @@
 											<a target="_blank"
 												href="https://www.usenix.org/system/files/usenixsecurity23-kwong.pdf"
 												class="btn btn-secondary mybtn" role="button"><i
-													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper</a>
 											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
 												disabled></button>
 											<a target="_blank" href="https://www.youtube.com/watch?v=QT2KRH4clNM"
@@ -208,7 +216,7 @@
 												disabled></button>
 											<a target="_blank" href="https://ileakage.com/files/ileakage.pdf"
 												class="btn btn-secondary mybtn" role="button"><i
-													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper</a>
 										</div>
 									</li>
 									<li class="pub">
@@ -223,7 +231,7 @@
 												disabled></button>
 											<a target="_blank" href="https://arxiv.org/pdf/2305.03934.pdf"
 												class="btn btn-secondary mybtn" role="button"><i
-													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper</a>
 										</div>
 									</li>
 									<li class="pub">Ayush Agarwal, Sioli O'Connell, <u>Jason Kim</u>, Shaked Yehezkel,
@@ -240,7 +248,7 @@
 												disabled></button>
 											<a target="_blank" href="https://www.spookjs.com/files/spook-js.pdf"
 												class="btn btn-secondary mybtn" role="button"><i
-													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper (PDF)</a>
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper</a>
 											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
 												disabled></button>
 											<a target="_blank" href="https://www.youtube.com/watch?v=jkbX7NrrHcw"
