--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<div class="col">
 					<div class="col-md-12">
 						<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> whoami</h4>
-						<p>Hello! My name is Jason Kim, and I am a third-year PhD student in the <a
+						<p>Hello! My name is Jason Kim, and I am a fourth-year PhD student in the <a
 								href="https://architecture.fail/">Hardware Security Lab</a> advised by Prof. <a
 								href="https://www.cc.gatech.edu/~genkin/">Daniel Genkin</a>. I am part of the <a
 								href="https://scp.cc.gatech.edu">School of Cybersecurity and Privacy</a> at the <a
@@ -135,6 +135,16 @@
 
 								<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> ls publications/</h4>
 								<ul>
+									<li class="pub">
+										<u>Jason Kim</u>, Jalen Chuang, Daniel Genkin, and Yuval Yarom.<br>
+										<b>Title Redacted for Anonymous Review.</b><br>
+										Under submission.<br>
+									</li>
+									<li class="pub">
+										<u>Jason Kim</u>, Daniel Genkin, and Yuval Yarom.<br>
+										<b>Title Redacted Due to Ongoing Vulnerability Disclosure.</b><br>
+										To appear at IEEE Symposium on Security and Privacy (S&P), 2025.<br>
+									</li>
 									<li class="pub">
 										Ingab Kang, Walter Wang, <u>Jason Kim</u>, Stephan van Schaik, Youssef Tobah,
 										Daniel Genkin, Andrew Kwong, and Yuval Yarom.<br>
