Add seeking for internships

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
 								href="https://kjl.name/">Kevin Leach</a>.
 						</p>
 
+						<p><b>
+							Update: I am seeking a research internship in microarchitectural, CPU, and/or hardware security for Summer 2025. Please reach out to me over LinkedIn or email if you are hiring!
+						</b></p>
+
 						<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> cat research.txt</h4>
 						<p>I am interested in offensive hardware security and side channels. My work is to scrutinize
 							exotic optimizations in microarchitecture, and investigate if these optimizations carry
