--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
 								<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> ls publications/</h4>
 								<ul>
 									<li class="pub">
+										<u>Jason Kim</u>, Jalen Chuang, Daniel Genkin, and Yuval Yarom.<br>
+										<b>Title Redacted Due to Ongoing Vulnerability Disclosure.</b><br>
+										To appear at USENIX Security Symposium, 2025.<br>
+									</li>
+									<li class="pub">
 										<u>Jason Kim</u>, Daniel Genkin, and Yuval Yarom.<br>
 										<b>Title Redacted Due to Ongoing Vulnerability Disclosure.</b><br>
 										To appear at IEEE Symposium on Security and Privacy (S&P), 2025.<br>
