--- a/index.html
+++ b/index.html
@@ -141,13 +141,33 @@
 								<ul>
 									<li class="pub">
 										<u>Jason Kim</u>, Jalen Chuang, Daniel Genkin, and Yuval Yarom.<br>
-										<b>Title Redacted Due to Ongoing Vulnerability Disclosure.</b><br>
-										To appear at USENIX Security Symposium, 2025.<br>
+										<b>FLOP: Breaking the Apple M3 CPU via False Load Output Predictions.</b><br>
+										USENIX Security Symposium, 2025.<br>
+										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
+											<a target="_blank" href="https://predictors.fail/"
+												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
+													aria-hidden="true"></i>Website</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank" href="https://predictors.fail/files/FLOP.pdf"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper</a>
+										</div>
 									</li>
 									<li class="pub">
 										<u>Jason Kim</u>, Daniel Genkin, and Yuval Yarom.<br>
-										<b>Title Redacted Due to Ongoing Vulnerability Disclosure.</b><br>
-										To appear at IEEE Symposium on Security and Privacy (S&P), 2025.<br>
+										<b>SLAP: Data Speculation Attacks via Load Address Prediction on Apple Silicon.</b><br>
+										IEEE Symposium on Security and Privacy (S&P), 2025.<br>
+										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
+											<a target="_blank" href="https://predictors.fail/"
+												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
+													aria-hidden="true"></i>Website</a>
+											<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0"
+												disabled></button>
+											<a target="_blank" href="https://predictors.fail/files/SLAP.pdf"
+												class="btn btn-secondary mybtn" role="button"><i
+													class="fa fa-file-pdf-o" aria-hidden="true"></i>Paper</a>
+										</div>
 									</li>
 									<li class="pub">
 										Ingab Kang, Walter Wang, <u>Jason Kim</u>, Stephan van Schaik, Youssef Tobah,
@@ -222,6 +242,7 @@
 											Devices.</b><br>
 										ACM Conference on Computer and Communications Security (CCS), 2023.<br>
 										CSAW Applied Research Competititon (North America), 2023, Finalist.<br>
+										Top Picks in Hardware and Embedded Security, 2024.<br>
 										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
 											<a target="_blank" href="https://ileakage.com/"
 												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
