--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<div class="col">
 					<div class="col-md-12">
 						<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> whoami</h4>
-						<p>Hello! My name is Jason Kim, and I am a fourth-year PhD student in the <a
+						<p>Hello! My name is Jason Kim, and I am a fourth-year PhD candidate in the <a
 								href="https://architecture.fail/">Hardware Security Lab</a> advised by Prof. <a
 								href="https://www.cc.gatech.edu/~genkin/">Daniel Genkin</a>. I am part of the <a
 								href="https://scp.cc.gatech.edu">School of Cybersecurity and Privacy</a> at the <a
@@ -110,17 +110,11 @@
 								href="https://kjl.name/">Kevin Leach</a>.
 						</p>
 
-						<p><b>
-							Update: I am seeking a research internship in microarchitectural, CPU, and/or hardware security for Summer 2025. Please reach out to me over LinkedIn or email if you are hiring!
-						</b></p>
-
 						<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> cat research.txt</h4>
-						<p>I am interested in offensive hardware security and side channels. My work is to scrutinize
-							exotic optimizations in microarchitecture, and investigate if these optimizations carry
-							implications for security. Within this field, my focus is on recent heavyweight ARM SoCs and
+						<p>I am interested in offensive hardware security and microarchitectural side-channels. My work is to scrutinize
+							exotic optimizations in new hardware, and investigate if these optimizations can inadvertently undermine security. More specifically, I focus on recent heavyweight Arm SoCs and
 							the
-							security
-							of web browser engines.</p>
+							side-channel resilience of web browser engines.</p>
 
 						<p>Before side channels, I worked on machine learning models for binary analysis, network
 							security and intrusion detection systems, and a little bit of bioinformatics alongside my
