--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 										<u>Jason Kim</u>, Daniel Genkin, and Yuval Yarom.<br>
 										<b>SLAP: Data Speculation Attacks via Load Address Prediction on Apple Silicon.</b><br>
 										IEEE Symposium on Security and Privacy (S&P), 2025.<br>
+										Distinguished Paper Award.<br>
 										<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
 											<a target="_blank" href="https://predictors.fail/"
 												class="btn btn-secondary mybtn" role="button"><i class="fa fa-globe"
