Update CV, whoami and research

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<div class="col">
 					<div class="col-md-12">
 						<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> whoami</h4>
-						<p>Hello! My name is Jason Kim, and I am a fourth-year PhD candidate in the <a
+						<p>Hello! My name is Jason Kim, and I am a fifth (and final)-year PhD candidate in the <a
 								href="https://architecture.fail/">Hardware Security Lab</a> advised by Prof. <a
 								href="https://www.cc.gatech.edu/~genkin/">Daniel Genkin</a>. I am part of the <a
 								href="https://scp.cc.gatech.edu">School of Cybersecurity and Privacy</a> at the <a
@@ -122,6 +122,8 @@
 								href="https://eecs388.org">computer security course</a> for two years as a teaching
 							assistant, and brought components of it over to Georgia Tech's <a
 								href="https://gtinfosec.org/"">Introduction to Information Security</a> over a year's tenure.</p>
+
+						<p>Most recently, I expanded my interests to hardware defenses, namely white-box microarchitectural security analyses through RTL simulation and static methods. This was made possible by a research internship at <a href="https://siliconassurance.com/">Silicon Assurance</a>.</p>
 
 						<h4 style=" color: #0088ff"><small>nosajmik@gthwsec:~$</small> cat misc.txt</h4>
 								<p>Outside of work, I enjoy cooking, movies, hiking, traveling, road tripping, working
