whoami update - on the job market

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 								href="https://kjl.name/">Kevin Leach</a>.
 						</p>
 
+						<p><b>I am on the job market, targeting a start date in Spring 2026. I am interested in both academic and industry paths - if you are hiring, please send me an email or a LinkedIn message!</b></p>
+
 						<h4 style="color: #0088ff"><small>nosajmik@gthwsec:~$</small> cat research.txt</h4>
 						<p>I am interested in offensive hardware security and microarchitectural side-channels. My work is to scrutinize
 							exotic optimizations in new hardware, and investigate if these optimizations can inadvertently undermine security. More specifically, I focus on recent heavyweight Arm SoCs and
